--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt-material-design-icons": "^1.0.4",
     "vee-validate": "^3.2.5",
     "vue-chart.js": "^0.2.0",
+    "vue-fb-customer-chat": "^0.2.0",
     "vue-pdf": "^4.0.8",
     "vuex-persistedstate": "^2.7.1"
   },
