--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.8.4",
     "@nuxtjs/axios": "^5.3.6",
+    "animate.css": "^4.1.0",
     "chart.js": "^2.9.3",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.2.13",
@@ -21,6 +22,7 @@
     "nuxt": "^2.0.0",
     "nuxt-leaflet": "0.0.21",
     "nuxt-material-design-icons": "^1.0.4",
+    "rsvp": "^4.8.5",
     "vee-validate": "^3.2.5",
     "vue-chart.js": "^0.2.0",
     "vue-fb-customer-chat": "^0.2.0",
