--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "animate.css": "^4.1.0",
     "chart.js": "^2.9.3",
+    "emailjs-com": "^2.6.3",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.2.13",
     "moment": "^2.25.1",
